--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,12 +1,12 @@
-<div id="<%= dom_id post %>">
-  <p>
-    <strong>Title:</strong>
-    <%= post.title %>
-  </p>
+<article class="blog-post">
+  <div id="<%= dom_id post %>">
+    <h2 class="display-5 link-body-emphasis mb-1"><%= post.title %></h2>
 
   <p>
-    <strong>Content:</strong>
-    <%= post.content %>
-  </p>
-
-</div>
+      <%= post.content %>
+    </p>
+<p>
+      <%= post.content %>
+    </p>
+      </div>
+</article>
