--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div>
-    <%= form.label :pict, style: "display: block" %>
-    <%= form.file_field :content %>
+    <%= form.label :image, style: "display: block" %>
+    <%= form.file_field :image %>
   </div>
 
   <div>
