--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,5 +8,12 @@
 <p>
       <%= post.content %>
     </p>
+
+    <p>
+    <strong>image:</strong>
+    <%= post.image %>
+    <%= image_tag(post.image.url, alt: 'Image', class: 'img-fluid') if post.image? %>
+
+  </p>
       </div>
 </article>
