--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,10 +6,10 @@
       <div>
         <%= link_to "Edit this post", edit_post_path(@post) %> |
         <%= link_to "Back to posts", posts_path %>
-        <%= button_to "Destroy this post", @post, method: :delete %>
+        <%= button_to "Destroy this post", @post, method: :delete, class: "btn btn-sm btn-outline-secondary"%>
       </div>
 
-    </div>
+</div>
 
     <div class="col-md-4">
       <div class="position-sticky" style="top: 2rem;">
